# Job-Manager-Adapter

./: .gitignore  .trackify.jsonl  Dockerfile  README.md  go.mod  go.sum  main.go  sample-code.go
.github/ISSUE_TEMPLATE/: c4gt_community.yml
api/handlers/: application_handler.go  business.go  job-application.go  job.go  onest.go  organization_handler.go  scheme_handler.go
api/middleware/: cors.go
api/routes/: base-router.go  business.go  job-application.go  job.go  router.go
bap/: go.mod  main.go
bap/backend/: Makefile  go.mod  go.sum  main.go
beneficiary/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
bpp/backend/: Makefile  README.md  go.mod  go.sum  main.go
docs/: docs.go  swagger.json  swagger.yaml
fastapi-job-recommender/: README.md  app.py  pyproject.toml  requirements.txt
fastapi-job-recommender/src/: main.py
fastapi-job-recommender/src/api/: endpoints.py
fastapi-job-recommender/src/core/: config.py  logging.py
fastapi-job-recommender/src/utils/: embeddings.py
internal/business/: handler.go
internal/job/: handler.go
internal/job-application/: handler.go
internal/onest/: handler.go
onest-network-scheme-manager/: go.mod
pkg/clients/: clients.go
pkg/config/: config.go
pkg/proxy/: proxy.go
pkg/server/: server.go
pkg/utils/: misc.go
scheme-manager/: .env  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
scheme-manager/config/: db.go
scheme-manager/controllers/: applicationsController.go  schemeController.go
scheme-manager/database/: database.go
scheme-manager/models/: application.go  (+1 more)
(+177 files in other folders)
